--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 <!-- templates/register.html -->
 {% extends "base.html" %}
 {% block content %}
-  <h2>Register</h2>
+  <h2>Registeer</h2>
   <form method="POST">
     <label>Username:</label>
     <input type="text" name="username" required>
